--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PushMessageTestApp</string>
     <string name="no_chats">No chats</string>
+    <string name="enter_message">Enter message</string>
+    <string name="no_messages">No messages</string>
 </resources>
