--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="no_messages">No messages</string>
     <string name="login_error">Can\'t login.</string>
     <string name="chat_load_error">Can\'t load chats.</string>
+    <string name="get_available_users_error">Couldn\'t load available users</string>
 </resources>
