--- a/chats-list/src/main/res/values/strings.xml
+++ b/chats-list/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="go_back">Go back</string>
     <string name="chats">Chats</string>
     <string name="show_menu">Show menu</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">Ok</string>
+    <string name="select_user">Select user</string>
 </resources>
