--- a/chats-list/src/main/res/values/strings.xml
+++ b/chats-list/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="cancel">Cancel</string>
     <string name="ok">Ok</string>
     <string name="select_user">Select user</string>
+    <string name="send_message">send message</string>
+    <string name="add_image">add image</string>
 </resources>
